--- a/feple-server/requirements.txt
+++ b/feple-server/requirements.txt
@@ -1,32 +1,70 @@
-amqp==5.3.1
-asgiref==3.8.1
-billiard==4.2.1
+# Django Framework
+Django==5.2.1
+djangorestframework==3.16.0
+django-cors-headers==4.5.0
+
+# Database
+mysqlclient==2.2.7
+sqlalchemy==2.0.28
+
+# Environment & Configuration
+python-dotenv==1.1.0
+
+# AI/ML Libraries
+google-generativeai>=0.4.1,<0.5.0
+langchain==0.1.12
+langchain-google-genai==0.0.11
+
+# Async Processing
 celery==5.5.2
-certifi==2025.4.26
-charset-normalizer==3.4.2
+django_celery_results==2.6.0
+redis==6.1.0
+
+# HTTP Requests
+requests==2.32.3
+
+# Date/Time Processing
+python-dateutil==2.9.0.post0
+
+# Utilities
+six==1.17.0
+
+# Celery Dependencies
+amqp==5.3.1
+billiard==4.2.1
+kombu==5.5.3
+vine==5.1.0
+
+# Click (CLI utilities)
 click==8.2.1
 click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
+
+# Terminal/Console
 colorama==0.4.6
-Django==5.2.1
-django_celery_results==2.6.0
-djangorestframework==3.16.0
-idna==3.10
-kombu==5.5.3
-mysqlclient==2.2.7
 prompt_toolkit==3.0.51
-python-dateutil==2.9.0.post0
-python-dotenv==1.1.0
-redis==6.1.0
-requests==2.32.3
-six==1.17.0
+wcwidth==0.2.13
+
+# Core Dependencies
+asgiref==3.8.1
+certifi==2025.4.26
+charset-normalizer==3.4.2
+idna==3.10
 sqlparse==0.5.3
 tzdata==2025.2
 urllib3==2.4.0
-vine==5.1.0
-wcwidth==0.2.13
-google-generativeai>=0.4.1,<0.5.0
-langchain==0.1.12
-langchain-google-genai==0.0.11
-sqlalchemy==2.0.28
+
+# Development & Testing (optional)
+pytest>=7.0.0
+pytest-django>=4.5.0
+pytest-cov>=4.0.0
+
+# Code Quality (optional)
+black>=23.0.0
+flake8>=6.0.0
+isort>=5.12.0
+
+# Type Checking (optional)
+mypy>=1.0.0
+types-requests>=2.31.0
